# jxr2uhdr

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.cargo/: config.toml
.github/workflows/: build.yml  deploy-web.yml  release.yml
jxr2uhdr-cli/: Cargo.toml
jxr2uhdr-cli/src/: decode.rs  encode.rs  lib.rs  main.rs  types.rs  wasm.rs
jxr2uhdr-cli/tests/: e2e.rs  pipeline.rs
jxr2uhdr-web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
jxr2uhdr-web/src/: App.vue  main.ts
jxr2uhdr-web/src/components/: ActionBar.vue  ConvertSettings.vue  DropZone.vue  PreviewPanel.vue
jxr2uhdr-web/src/composables/: useConverter.ts  useWasm.ts
jxr2uhdr-web/src/i18n/: en.ts  index.ts  zh-CN.ts
scripts/: build-wasm.sh
src/: convert.rs  decode.rs  encode.rs  main.rs  types.rs
