[package]
name = "jxr2uhdr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = "1.25.0"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
half = "2.7.1"
jpegxr = "0.3.1"
log = "0.4.29"

[target.'cfg(not(linux))'.dependencies]
ultrahdr = "0.1.3"

# Disable vendored feature on Linux to avoid build issues with libjpeg-turbo and to use the system's libjpeg-dev instead.
[target.'cfg(linux)'.dependencies]
ultrahdr = { version = "0.1.3", default-features = false, features = [
    "iso21496",
] }
