[package]
name = "jxr2uhdr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = "1.25.0"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
half = "2.7.1"
jpegxr = { git = "https://github.com/tfx2001/jpegxr", rev = "ea6606b7a81c1955a318f7cda02a69a6267a8efd" }
log = "0.4.29"
ultrahdr = { git = "https://github.com/tfx2001/libultrahdr-rs", rev = "ce818466c97132ab94c082d7db5dd89d88e6c656" }
